--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Baby's Breath</title>
-    <link rel="stylesheet"
-      href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/styles/default.min.css">
+    <link rel="stylesheet" href="./src/assets/style/default.min.css">
   </head>
   <body>
     <div id="app"></div>
